--- a/gozerodemo/apidemo/etc/user.yaml
+++ b/gozerodemo/apidemo/etc/user.yaml
@@ -1,6 +1,9 @@
 Name: user
-Host: 0.0.0.0
-Port: 8888
+Host: 127.0.0.1
+Port: 8001
+
+Mysql:
+  DataSource: root:123456@tcp(127.0.0.1:3306)/gozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 Auth: 
   AccessSecret: 123758sdfsd5f48dfTOKEN
