--- a/gozerodemo/rpcdemo/etc/rpcdemo.yaml
+++ b/gozerodemo/rpcdemo/etc/rpcdemo.yaml
@@ -1,6 +1,8 @@
 Name: rpcdemo.rpc
-ListenOn: 0.0.0.0:8080
+ListenOn: 0.0.0.0:6001
+Mode: dev
 Etcd:
-  Hosts:
-  - 127.0.0.1:2379
-  Key: rpcdemo.rpc
+    Hosts:
+      - 127.0.0.1:2379
+    Key: rpcdemo.rpc
+
